# hetero-sycl

./: .gitignore  CMakeLists.txt  Makefile  README.md  experiments.sh  experiments_bicgstab.sh  gantt.py  generate_data.sh  plot_exp01_gantt.py  plot_exp02_gantt.py  plot_exp04_gantt.py  plot_scheduler_gantt.py  run_exp01_baselines.sh  run_exp02.sh  run_exp03.sh  run_exp04.sh  run_experiment_suite.sh
apps/createcsr/: createcsr.cpp
apps/exp01_baseline_spmv/: CMakeLists.txt  exp01_baseline_spmv_main.cpp
apps/exp03_multithreaded_dispatch/: CMakeLists.txt  exp03_multithreaded_dispatch_main.cpp
apps/spmv_bicgstab/: CMakeLists.txt  bicgstab_cli.cpp
apps/spmv_cli/: CMakeLists.txt  main.cpp
include/spmv/: csr.hpp  kernels.hpp  scheduler.hpp  scheduler_registry.hpp
src/: CMakeLists.txt  scheduler_factory.cpp  spmv_cpu.cpp  spmv_csr.cpp  spmv_gpu.cpp
src/schedulers/: adaptive_load_balancing.cpp  bandit_scheduler.cpp  chunked_rr.cpp  dynamic.cpp  feedback.cpp  locality_block.cpp  static_block.cpp  static_split.cpp  workstealing.cpp
tests/: CMakeLists.txt  test_devices.cpp
